patches-dsl/tests/fixtures/errors/unknown_port_label_param.patches
template bad_port(x: float = 0.0) {
    in:  inp
    out: out
    module osc : Osc
    $.out <- osc.<nonexistent>
    osc.x <- $.inp
}
patch {
    module t : bad_port
    module out : AudioOut
    out.in_left <- t.out
}
